<resources>
    <string-array name="blood_group">
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="choose_gender_title">Choose Your Gender</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="app_name">RSS HSS Blood Donors Bureau</string>
    <string name="rss_hss_about_info">The history of voluntary blood donation in India dates back to 1942
        during the second world war, when blood donors were required to help the wounded soldiers.
        The first blood bank was established in Kolkata, West Bengal in March 1942 at the All India
        Institute of Hygiene and Public Health and was managed by the Red Cross. The donors were mostly
        government employees and people from the Anglo-Indian community who donated blood for a humanitarian
        cause. We at RSS HSS Blood Donors Bureau try to save every life who in need of blood.
    </string>
    <string name="contact_email">rsshssblooddonors@gmail.com</string>

    <string name="select">select</string>
    <string name="remove">remove</string>
    <string name="user_details">userDetails</string>
    <string name="drawer_open">Navigation Drawer Open</string>
    <string name="drawer_close">Navigation Drawer Close</string>
    <string name="contacted_donors_title">Contacted Donors</string>
    <string name="mark_complete_title">Mark Donation As Complete</string>
    <string name="blank"></string>
    <string name="no_internet_message">Please check your Internet connection and try again</string>
    <string name="donate_today_registered_status_title">Registered for Donating Today</string>
    <string name="donate_today_registered_status_message">Thank you for opting to donate today</string>

    <!--validation messages-->
    <string name="required_error">Required</string>
    <string name="not_valid_error">Not Valid</string>
    <string name="leave_blank">Leave Blank If None</string>

    <!--dialog box text-->
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm?</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="loading">Loading</string>
    <string name="enter_here">Enter Here</string>
    <string name="call">Call</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="thank_you">Thank You</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="dob_title">Date Of Birth</string>
    <string name="logout_error_message">You must be logged in to logout</string>
    <string name="please_wait_message">Please wait until the process is completed</string>
    <string name="logout_confirm_message">Are you sure you want to logout ?</string>
    <string name="enter_otp_message">Enter the One Time Password you received through SMS</string>
    <string name="enter_otp_title">Enter OTP</string>
    <string name="enter_number_title">Enter your phone number</string>
    <string name="enter_request_code_title">Enter Request Code</string>
    <string name="enter_request_code_message">Enter the request code you recieved through SMS.</string>
    <string name="enter_number_message">Your phone number is required for OTP verification</string>
    <string name="on_cancelled_message">Something went wrong.\nPlease try again later.</string>
    <string name="wrong_otp_message">Sorry that does not seem to be the right code</string>
    <string name="verification_failed">The verification process failed.</string>
    <string name="call_permission_denied_message">Cannot make phone calls without granting permission</string>
    <string name="reassign_confirmation_message">Do you want to reassign donors for this donne?</string>
    <string name="select_a_donor_title">Select a Donor</string>
    <string name="donation_complete_message">The donation has been marked as complete!</string>
    <plurals name="selected_donors_count_title">
        <item quantity="other">%1$d Donors Selected</item>
        <item quantity="one">%1$d Donor Selected</item>
    </plurals>
    <plurals name="notify_donors_confirm_message">
        <item quantity="other">Notify %1$d Donors ?</item>
        <item quantity="one">Notify %1$d Donor ?</item>
    </plurals>
    <string name="available_toggled_message">You have been marked as %1$s</string>
    <string name="req_made_today">Requests Made Today</string>
    <string name="donate_today_title">What is Donate today ?</string>
    <string name="donate_today_message">
        Donate today is a way to make a donation especially today for any reason that you like.
    </string>
    <string name="how_it_works_title">How it works ?</string>
    <string name="how_it_works_message">
        You will be contacted within today if there is any need of your compatible blood type.
    </string>
    <string name="donate_today_registered_message">
        You have been registered for making donations today. You will be contacted in needed.
    </string>

    <!--MainActivity strings-->
    <string name="no_donne_message">Invalid request ID</string>
    <string name="no_donor_message">There is no donor with the given phone number</string>
    <string name="login_success_message">Successfully Logged In</string>
    <string name="logout_success_message">Logged out Successfully</string>
    <string name="login_first_message">Please login first to continue</string>
    <string name="not_registered">Not registered</string>
    <string name="register_or_login">Register or Login to continue</string>

    <!--DonorRegistrationActivity strings-->
    <string name="choose_your_group">Choose your Blood Group</string>
    <string name="registering_donor_message">Please wait while you are being registered</string>
    <string name="already_exist_error">This phone number is already registered with an account.\nPlease use another number.</string>
    <string name="registration_unsuccessful">Something went wrong\nPlease try again later</string>
    <string name="registration_successful_greeting">Thank You for Registering</string>
    <string name="tnc_error">"You have to accept to our Terms and Conditions to continue"</string>
    <string name="thank_for_reg_message">Thank you for registering</string>

    <!--DoneeRequestActivity srings-->
    <string name="req_submitted_message">Your request has been submitted successfully!</string>
    <string name="registering_request_message">Registering your Request</string>
    <string name="choose_req_group">Choose Required Blood Group</string>

    <!--DonorSelectionListActivity strings-->
    <string name="donor_notified_message">The selected donors have been notified</string>

    <!--sms templates-->
    <string name="need_help_message">
        URGENT:Blood Donation Request. %1$s at %2$s hospital requires %3$s blood type.We need your help now. Please contact %4$s - %5$s.
    </string>
    <string name="help_asked_message">We have arranged donors for you!.</string>

</resources>
