<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:textAlignment="gravity"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:contentPadding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:src="@drawable/bd_logo_trans"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="@string/app_name"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#383838"
                        android:textSize="18sp"
                        android:text="@string/rss_hss_about_info"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:contentPadding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Contact Us"
                        android:textSize="20sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="#535353"
                        android:orientation="horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:textColor="#5b5b5b"
                        android:textStyle="bold"
                        android:text="Email"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="16sp"
                        android:textColor="#2b2b2b"
                        android:textIsSelectable="true"
                        android:text="@string/contact_email"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:textColor="#5b5b5b"
                        android:textStyle="bold"
                        android:text="Phone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="16sp"
                        android:textColor="#2b2b2b"
                        android:textIsSelectable="true"
                        android:text="9876543210"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="16sp"
                        android:textColor="#2b2b2b"
                        android:textIsSelectable="true"
                        android:text="9876543210"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>